增加微信公众号服务接口（消息接收及发送）

--- a/MsWeb/Content/style.css
+++ b/MsWeb/Content/style.css
@@ -136,3 +136,13 @@
 	border-top: 1px dotted #ccc;
 	background: red;
 }
+/*按钮居中显示*/
+.div_bottom{
+    position:absolute;
+    bottom:10px;
+    width:93%;/*100%的话是390，但母容器padding-left了15px,恨到偏右了*/
+}
+.btn-center{
+    margin:0 auto;
+    text-align:center;
+}
