C#实现微信公众号接口部分功能：获取Token、消息的发送接收、自动回复。 HttpClient实现Get、Post请求

--- a/MsWeb/Views/Home/SjDownload.cshtml
+++ b/MsWeb/Views/Home/SjDownload.cshtml
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width" />
 </head>
 <body>
-    <div class="jumbotron">
+    <div class="container jumbotron">
         <h2><b>应用描述</b></h2>
         <p class="lead">闪荐是一款导购类APP。主要是为了连接淘宝客与买家。淘宝客门可以把自己买过的性价比高的
         商品推荐到闪荐中，并说明推荐理由以及自用或购买的证据（防刷单），通过人工审核后，即可展现在用户面前。
