首页功能改造：1、顶级目录下作为官网介绍，无须包含登录功能。2、各产品独立目录，总入口放在首页的产品中心下面。

--- a/MsWeb/Views/SharePing/AboutSharePing.cshtml
+++ b/MsWeb/Views/SharePing/AboutSharePing.cshtml
@@ -1,4 +1,8 @@
-﻿<div class="container">
+﻿@{
+    Layout = "~/Views/Shared/_SharePingLayout.cshtml";
+}
+
+<div class="container">
     <div class="jumbotron">
         <h1>闪荐</h1>
         <p class="lead">以闪电的速度将优惠券推送给大家！以闪电的速度将性价比高的产品推送给大家！</p>
@@ -11,19 +15,19 @@
                 并说明推荐理由以及自用或购买的证据（防刷单），通过人工审核后，即可展现在用户面前。
                 用户可以根据自己的需求进行选择领取优惠券。
             </p>
-            <p><a class="btn btn-default" href="~/Home/Aboutus">了解更多 &raquo;</a></p>
+            @*<p><a class="btn btn-default" href="~/Home/Aboutus">了解更多 &raquo;</a></p>*@
         </div>
         <div class="col-md-4">
             <h2><font color="blue">软件下载</font></h2>
             <p>目前只有Android版本。</p>
             <p>无需注册，大额优惠券随便领取！推广期间，1元即可成为特约用户，还可通过分享商品<font color="red">赚钱</font></p>
             <p>百分之百用户真实推荐！百分之百人工急速审核！</p>
-            <p><a class="btn btn-default" href="~/Home/SjDownload">进入下载 &raquo;</a></p>
+            <p><a class="btn btn-default" href="~/SharePing/SjDownload">进入下载 &raquo;</a></p>
         </div>
-        <div class="col-md-4">
+        @*<div class="col-md-4">
             <h2><font color="red">招募令</font></h2>
             <h5>安卓手机客户端刚刚上线，现招募100名特约用户，有淘宝账号，零基础即可加入！快来加入吧！</h5>
             <p><a class="btn btn-default" href="~/Home/Recruit">详细要求 &raquo;</a></p>
-        </div>
+        </div>*@
     </div>
 </div>
