--- a/MsWeb/Views/SharePing/FindCoupon.cshtml
+++ b/MsWeb/Views/SharePing/FindCoupon.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    Layout = "~/Views/Shared/_layout.cshtml";
+    Layout = "~/Views/Shared/_SharePingLayout.cshtml";
 }
 
 <!DOCTYPE html>
@@ -36,7 +36,7 @@
                 <form align:center>
                     <input type="text" class="inputSearch" />
                     <input type="button" value="搜索" class="btnSearch" />
-                    <a href="/Coupon"><input type="button" value="返回推荐" /></a>
+                    <a href="SharePing"><input type="button" value="返回推荐" /></a>
                 </form>
                 <p></p>
                 @*<p>
