--- a/MsWeb/Views/SharePing/SoftDownload.cshtml
+++ b/MsWeb/Views/SharePing/SoftDownload.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    Layout = "~/Views/Shared/_layout.cshtml";
+    Layout = "~/Views/Shared/_SharePingLayout.cshtml";
 }
 
 <!DOCTYPE html>
@@ -16,7 +16,7 @@
                     <img src="/images/softicon/sj_icon.png" width="94" height="94" />
                 </a>
                 <h4>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;闪荐</h4>
-                <p><a class="btn btn-default" href="~/Home/SjDownload">进入下载 &raquo;</a></p>
+                <p><a class="btn btn-default" href="~/SharePing/SjDownload">进入下载 &raquo;</a></p>
             </div>
 
             <div class="col-md-3">
