--- a/MsWeb/Views/Home/UpdateLog.cshtml
+++ b/MsWeb/Views/Home/UpdateLog.cshtml
@@ -12,6 +12,11 @@
             <th width="80">更新人员</th>
         </tr>
         <tr>
+            <td>2017年11月7日</td>
+            <td>首页功能改造：1、顶级目录下作为官网介绍，无须包含登录功能。2、各产品独立目录，总入口放在首页的产品中心下面。</td>
+            <td align="center">Lisx24</td>
+        </tr>
+        <tr>
             <td>2017年10月31日</td>
             <td>首页菜单修改为二级菜单功能，首页轮播图修改为全屏。</td>
             <td align="center">Lisx24</td>
