--- a/MsWeb/Views/SharePing/Register.cshtml
+++ b/MsWeb/Views/SharePing/Register.cshtml
@@ -47,7 +47,7 @@
 <script type="text/javascript">
     var isLogin = getCookie('isLogin');
     if (isLogin == "true") {
-        location.href = "/Home";
+        location.href = "/SharePing";
     }
     var code;
     createCode();
@@ -114,7 +114,7 @@
                         localStorage.userid = rst.data.userid;
                         document.write(localStorage.userid);
                         setCookie("isLogin", true, 10, '/');
-                        location.href = "/Home";
+                        location.href = "/SharePing";
                     } else {
                         alert(rst.message);
                         createCode();
