增加获取单个商品的前后台，增加提供的各服务简介页面

--- a/MsWeb/Views/Home/Index.cshtml
+++ b/MsWeb/Views/Home/Index.cshtml
@@ -30,46 +30,46 @@
     <div class="container" style="max-width:1024px;">
         <h1 class="text-center" style="color:purple;">我们提供的服务</h1>
         <div class="row">
-            <div class="col-md-4" style="background-color:darkseagreen;height:220px;">
-                <h2 class="text-center"><font color="red">计算机软件开发</font></h2>
-                <h5>计算机软件开发。计算机软件开发。计算机软件开发。计算机软件开发。计算机软件开发。计算机软件开发。计算机软件开发。计算机软件开发。</h5>
-                <div class="div_bottom">
-                    <p class="btn-center"><a class="btn btn-default" href="~/Home/Recruit">了解更多 &raquo;</a></p>
-                </div>
-            </div>
-            <div class="col-md-4" style="background-color:burlywood;height:220px;">
-                <h2 class="text-center"><font color="blue">Android手机APP</font></h2>
-                <p>Android手机APP。Android手机APP。Android手机APP。Android手机APP。Android手机APP。Android手机APP。Android手机APP。Android手机APP。</p>
-                <div class="div_bottom">
-                    <p class="btn-center"><a class="btn btn-default" href="~/Home/SjDownload">了解更多 &raquo;</a></p>
-                </div>
-            </div>
             <div class="col-md-4" style="background-color:aquamarine;height:220px;">
-                <h2 class="text-center">公司宣传主页</h2>
-                <p>公司宣传主页。公司宣传主页。公司宣传主页。公司宣传主页。公司宣传主页。公司宣传主页。公司宣传主页。公司宣传主页。公司宣传主页。</p>
-                <div class="div_bottom">
-                    <p class="btn-center"><a class="btn btn-default" href="~/Home/Aboutus">了解更多 &raquo;</a></p>
-                </div>
-            </div>
-            <div class="col-md-4" style="background-color:burlywood;height:220px;">
-                <h2 class="text-center"><font color="blue">网站SEO</font></h2>
-                <p>网站SEO。网站SEO。网站SEO。网站SEO。网站SEO。网站SEO。网站SEO。网站SEO。网站SEO。网站SEO。网站SEO。网站SEO。网站SEO。网站SEO。</p>
-                <div class="div_bottom">
-                    <p class="btn-center"><a class="btn btn-default" href="~/Home/SjDownload">了解更多 &raquo;</a></p>
-                </div>
-            </div>
-            <div class="col-md-4" style="background-color:aquamarine;height:220px;">
-                <h2 class="text-center">计算机硬件销售</h2>
-                <p>计算机硬件销售。计算机硬件销售。计算机硬件销售。计算机硬件销售。计算机硬件销售。计算机硬件销售。计算机硬件销售。计算机硬件销售。</p>
-                <div class="div_bottom">
-                    <p class="btn-center"><a class="btn btn-default" href="~/Home/Aboutus">了解更多 &raquo;</a></p>
-                </div>
-            </div>
-            <div class="col-md-4" style="background-color:darkseagreen;height:220px;">
                 <h2 class="text-center"><font color="red">软件培训</font></h2>
-                <h5>软件培训教育。软件培训教育。软件培训教育。软件培训教育。软件培训教育。软件培训教育。软件培训教育。软件培训教育。软件培训教育。</h5>
+                <h5>C#、Android、SQL Server等软件开发技术的线上线下培训服务</h5>
                 <div class="div_bottom">
-                    <p class="btn-center"><a class="btn btn-default" href="~/Home/Recruit">了解更多 &raquo;</a></p>
+                    <p class="btn-center"><a class="btn btn-default" href="~/ProductService/Training">了解更多 &raquo;</a></p>
+                </div>
+            </div>
+            <div class="col-md-4" style="background-color:burlywood;height:220px;">
+                <h2 class="text-center"><font color="red">计算机软件开发</font></h2>
+                <h5>根据用户需求，实现各种管理软件、服务软件的开发。</h5>
+                <div class="div_bottom">
+                    <p class="btn-center"><a class="btn btn-default" href="~/ProductService/Software">了解更多 &raquo;</a></p>
+                </div>
+            </div>
+            <div class="col-md-4" style="background-color:aquamarine;height:220px;">
+                <h2 class="text-center">计算机相关硬件销售</h2>
+                <p>一体机销售，鼠标、键盘、主机等计算机配件销售，协助DIY组装电脑！</p>
+                <div class="div_bottom">
+                    <p class="btn-center"><a class="btn btn-default" href="~/ProductService/Hardware">了解更多 &raquo;</a></p>
+                </div>
+            </div>
+            <div class="col-md-4" style="background-color:burlywood;height:220px;">
+                <h2 class="text-center"><font color="blue">手机APP软件服务</font></h2>
+                <p>目前支付Android手机APP开发，可以只开发移动端，也可以包含服务端！</p>
+                <div class="div_bottom">
+                    <p class="btn-center"><a class="btn btn-default" href="~/ProductService/AndroidApp">了解更多 &raquo;</a></p>
+                </div>
+            </div>
+            <div class="col-md-4" style="background-color:aquamarine;height:220px;">
+                <h2 class="text-center"><font color="blue">公司主页、产品宣传页服务</font></h2>
+                <p>开发宣传公司、宣传产品的网页。</p>
+                <div class="div_bottom">
+                    <p class="btn-center"><a class="btn btn-default" href="~/ProductService/WebSite">了解更多 &raquo;</a></p>
+                </div>
+            </div>
+            <div class="col-md-4" style="background-color:burlywood;height:220px;">
+                <h2 class="text-center">网站SEO服务</h2>
+                <p>使用优化技术，提高网站的百度关键字搜索排名！</p>
+                <div class="div_bottom">
+                    <p class="btn-center"><a class="btn btn-default" href="~/ProductService/WebSiteSEO">了解更多 &raquo;</a></p>
                 </div>
             </div>
         </div>
