--- a/MsWeb/Views/Home/Aboutus.cshtml
+++ b/MsWeb/Views/Home/Aboutus.cshtml
@@ -11,15 +11,24 @@
 </head>
 <body>
     <div class="container">
-        <h3>关于闪荐</h3>
-        <p>我们不生产商品，也不销售商品，我们只推荐我们用着好的产品，我们只推荐性价比高的商品，我们只会给您带来便宜和便利！</p>
-        <p>我们的目标是净化微信朋友圈。淘宝客们把我们的朋友圈冲的乱七八糟，所以我们只能把淘宝客们请到《闪荐》中来分享商品。</p>
-        <h3>成为特约用户</h3>
-        <h5><font color='#FF4081'>成为特约用户，即可分享自己的商品，空闲时间就可以赚钱。如有需要请联系微信：ydxc608</font></h5>
-        <h3>商务合作</h3>
-        <h5><font color='#1849F8'>商务合作：xinglsx@126.com  微信:ydxc608</font></h5>
-        <h3>官方主页</h3>
-        官方主页:<a href='http://www.mingshukeji.com.cn'>http://www.mingshukeji.com.cn</a>
+        <h4>关于MSKJ</h4>
+        <p style="margin-left:30px">我们提供各种各样的计算机软件服务，手机APP软件服务，网站SEO服务，计算机相关硬件销售，公司主页、产品宣传页服务，计算机软件线上线下培训服务。</p>
+        <h4><b>计算机软件服务</b></h4>
+        <h5 style="margin-left:30px">根据用户需求，实现各种管理软件、服务软件的开发。</h5>
+        <h4><b>手机APP软件服务</b></h4>
+        <h5 style="margin-left:30px">目前支付Android手机APP开发，可以只开发移动端，也可以包含服务端！</h5>
+        <h4><b>网站SEO服务</b></h4>
+        <h5 style="margin-left:30px">使用优化技术，提高网站的百度关键字搜索排名！</h5>
+        <h4><b>计算机相关硬件销售</b></h4>
+        <h5 style="margin-left:30px">一体机销售，鼠标、键盘、主机等计算机配件销售，协助DIY组装电脑！</h5>
+        <h4><b>公司主页、产品宣传页服务</b></h4>
+        <h5 style="margin-left:30px">开发宣传公司、宣传产品的网页。</h5>
+        <h4><b>计算机软件线上线下培训服务</b></h4>
+        <h5 style="margin-left:30px">C#、Android、SQL Server等软件开发技术的线上线下培训服务</h5>
+        <h4><b>商务合作</b></h4>
+        <h5 style="margin-left:30px"><font color='#1849F8'>商务合作：xinglsx@126.com  微信:ydxc608  公众号:mskjvip888</font></h5>
+        <h4><b>官方主页</b></h4>
+        <h5 style="margin-left:30px">官方主页:<a href='http://www.mingshukeji.com.cn'>http://www.mingshukeji.com.cn</a></h5>
     </div>
 </body>
 </html>
