--- a/MsWeb/Views/SharePing/SjDownload.cshtml
+++ b/MsWeb/Views/SharePing/SjDownload.cshtml
@@ -11,10 +11,9 @@
 <body>
     <div class="container jumbotron">
         <h2><b>应用描述</b></h2>
-        <p class="lead">闪荐是一款导购类APP。主要是为了连接淘宝客与买家。淘宝客门可以把自己买过的性价比高的
-        商品推荐到闪荐中，并说明推荐理由以及自用或购买的证据（防刷单），通过人工审核后，即可展现在用户面前。
-        用户可以根据自己的需求进行选择领取优惠券。
+        <p class="lead">闪荐是一款导购类APP。主要是为广大买家提供各种淘宝天猫优惠券。这些都是购物达人推荐的性价比超高的好东西，也有优质商家做活动的好东西，通过人工仔细审核后才推送给广大买家。
         </p>
+        <p>广大买家无需注册，即可根据自己的需求进行选择领取优惠券。</p>
         <p> <a class="btn btn-default" target="_blank" href="http://www.mingshukeji.com.cn/Download/com.mingshu.goods.apk">点击下载 &raquo;</a></p>
         <h4>当前版本号为：<font color="red">1.1.0</font></h4>
         <p>2017-09-21  增加粉丝福利、发现界面，粉丝福利是专门给用户搜索粉丝福利券，发现界面目前只增加了移动网赚模块，后续会持续丰富，欢迎大家提出建议！
