--- a/MsWeb/Views/Shared/_Layout.cshtml
+++ b/MsWeb/Views/Shared/_Layout.cshtml
@@ -98,10 +98,11 @@
                             @Html.ActionLink("产品中心", "ProductCenter", "Home", new { area = "" }, null)
                             <ul class="navbar-nav dropdown-menu menulevel2-ul">
                                 <li>@Html.ActionLink("闪荐-SharePing", "Index", "SharePing", new { area = "" }, null)</li>
+                                <li>@Html.ActionLink("核心业务中心", "Index", "ProductService", new { area = "" }, null)</li>
                             </ul>
                         </li>
                         <li>@Html.ActionLink("更新日志", "UpdateLog", "Home", new { area = "" }, null)</li>
-                        <li>@Html.ActionLink("关于我们", "AboutUs", "Home", new { area = "" }, null)</li>
+                        <li>@Html.ActionLink("关于我们", "AboutCompany", "Home", new { area = "" }, null)</li>
                     </ul>
                 </div>
             </div>
