--- a/MsWeb/Views/Shared/_SharePingLayout.cshtml
+++ b/MsWeb/Views/Shared/_SharePingLayout.cshtml
@@ -4,6 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
+    <meta name="description" content="闪荐，以闪电的速度将优惠券推送给大家！提供大量高额限时免费优惠券。我们的口号:寻找更便宜的好东西！Cheaper，Better And Faster" />
     <script src="~/Scripts/jquery-1.10.2.js"></script>
     <script src="~/Scripts/jquery-1.10.2.min.js"></script>
     <script src="~/Scripts/jquery.cookie.js"></script>
