--- a/MsWeb/Views/SharePing/FindCoupon.cshtml
+++ b/MsWeb/Views/SharePing/FindCoupon.cshtml
@@ -36,7 +36,7 @@
                 <form align:center>
                     <input type="text" class="inputSearch" />
                     <input type="button" value="搜索" class="btnSearch" />
-                    <a href="SharePing"><input type="button" value="返回推荐" /></a>
+                    <a href="/SharePing/Index"><input type="button" value="返回推荐" /></a>
                 </form>
                 <p></p>
                 @*<p>
